modules/gdscript/tests/scripts/analyzer/errors/await_signal_no_infer.gd
signal my_signal()

func test():
	var _a := await my_signal
